--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4724,11 +4724,11 @@ fieldset:disabled .btn {
   --bs-accordion-btn-padding-y: 1rem;
   --bs-accordion-btn-color: var(--bs-body-color);
   --bs-accordion-btn-bg: var(--bs-accordion-bg);
-  --bs-accordion-btn-icon: url("./imágenes/arrow-up-bold-svgrepo-com.png");
+  --bs-accordion-btn-icon: url("../imágenes/arrow-up-bold-svgrepo-com.png");
   --bs-accordion-btn-icon-width: 1.25rem;
   --bs-accordion-btn-icon-transform: rotate(180deg);
   --bs-accordion-btn-icon-transition: transform 0.2s ease-in-out;
-  --bs-accordion-btn-active-icon: url("./imágenes/arrow-up-bold-svgrepo-com.png");
+  --bs-accordion-btn-active-icon: url("../imágenes/arrow-up-bold-svgrepo-com.png");
   --bs-accordion-btn-focus-border-color: #86b7fe;
   --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
   --bs-accordion-body-padding-x: 1.25rem;
