--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ svg {
   border-bottom: 2px solid var(--gris);
 }
 
-.modal-contenido {
+.modal-content {
   background-color: var(--semi-oscuro);
 }
 
