--- a/css/registro.css
+++ b/css/registro.css
@@ -22,6 +22,11 @@ body {
   justify-content: center;
 }
 
+a{
+  text-decoration: none !important ;
+  color: inherit;
+}
+
 .inicio_registro {
   width: 100%;
   max-width: 1000px;
