--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -516,6 +516,7 @@ button,
 [type="button"],
 [type="reset"],
 [type="submit"] {
+  appearance: inherit;
   -webkit-appearance: button;
 }
 button:not(:disabled),
@@ -573,6 +574,7 @@ legend + * {
 }
 
 [type="search"] {
+  appearance: inherit;
   -webkit-appearance: textfield;
   outline-offset: -2px;
 }
@@ -600,6 +602,7 @@ legend + * {
 
 ::file-selector-button {
   font: inherit;
+  appearance: inherit;
   -webkit-appearance: button;
 }
 
@@ -4210,7 +4213,7 @@ fieldset:disabled .btn {
   width: 1.2em;
   height: 1.5em;
   vertical-align: middle;
-  background-image: url("../imágenes/menu-symbol-of-three-parallel-lines-svgrepo-com.png");
+  background-image: url("./imágenes/menu-symbol-of-three-parallel-lines-svgrepo-com.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: 100%;
