--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4213,7 +4213,7 @@ fieldset:disabled .btn {
   width: 1.2em;
   height: 1.5em;
   vertical-align: middle;
-  background-image: url("./imágenes/menu-symbol-of-three-parallel-lines-svgrepo-com.png");
+  background-image: url("/imágenes/menu-symbol-of-three-parallel-lines-svgrepo-com.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: 100%;
