--- a/css/registro.css
+++ b/css/registro.css
@@ -65,6 +65,7 @@ a{
   outline: none;
   transition: all 300ms;
   margin-top: 30px;
+  border-radius: 5px;
 }
 
 .apartado div h3 {
@@ -76,6 +77,7 @@ a{
   background-color: white;
   border-color: white;
   color: var(--gris);
+  border-radius: 5px;
 }
 
 /* Formularios de inicio de sesión y registro */
@@ -125,6 +127,7 @@ a{
   color: var(--oscuro);
   cursor: pointer;
   outline: none;
+  border-radius: 5px;
 }
 
 .formulario_inicio {
@@ -135,22 +138,136 @@ a{
   display: none;
 }
 
+#logo {
+  border-radius: 10px;
+  width: 150px;
+  height: auto;
+  position: absolute;
+  top: -65%;
+  right: 125%; 
+  
+}
+
+#descripcion{
+  color: aliceblue;
+  font-weight: 800;
+  width: 5px;
+  font-size: 200%;
+  position: absolute;
+  top: -50%; 
+  right: 120%;
+  text-decoration: underline; 
+  text-decoration-color: aliceblue;
+  text-decoration-thickness: 2px; 
+}
+
+input {
+  padding: 5px;
+  border-radius: 5px; }
+
+
+  
+#div1{
+  position: absolute;
+  text-align: center;
+    top: 600px;
+    left: -45%;
+    color: aliceblue;
+    font-weight: 800;
+    font-size: 100%;
+    
+  
+  }
+  
+  
+  
+  
+  #comentario{
+  
+    position: absolute;
+   text-align: center;
+      top: 160%;
+    left: 0%;
+      color: aliceblue;
+      font-weight: 800;
+      font-size: 100%;
+      
+  }
+  
+  
+  #comentario2{
+    position: absolute;
+   text-align: center;
+      top: 160%;
+      right: 35%;
+      color: aliceblue;
+      font-weight: 800;
+      font-size: 100%;
+
+  }
+
+  #comentario3{
+
+    position: absolute;
+   text-align: center;
+      top: 160%;
+      right:-40%;
+      color: aliceblue;
+      font-weight: 800;
+      font-size: 100%;
+
+  }
+  
+  #ingles {
+    position: absolute;
+    margin-top: 22%;
+    left: -45%;
+    padding: 10px 40px;
+    border: none;
+    font-size: 14px;
+    background: #f2f2f2;
+    color: var(--oscuro);
+    cursor: pointer;
+    outline: none;
+    border-radius: 5px;
+    
+    }
+
+    #espanol{
+      position: absolute;
+    margin-top: 22%;
+    left: -30%;
+    padding: 10px 40px;
+    border: none;
+    font-size: 14px;
+    background: #f2f2f2;
+    color: var(--oscuro);
+    cursor: pointer;
+    outline: none;
+    border-radius: 5px;
+    }
+    
+
+    
 /* Responsive */
 
 @media screen and (max-width: 850px) {
   main {
-    margin-top: 50px;
+    margin-top: 1000px;
   }
   .apartado {
     max-width: 350px;
     height: 300px;
     flex-direction: column;
     margin: auto;
+    margin-bottom: -680px;
+    
   }
 
   .apartado div {
     margin: 0px;
     position: absolute;
+  
   }
 
   /* Formulario responsive */
@@ -159,9 +276,65 @@ a{
     top: -10px;
     left: -5px;
     margin: auto;
+    
+  }
+
+  .formulario_registro {
+    margin-top: -100px;
   }
 
   .formulario_inicio-registro form {
     position: relative;
+   }
+
+   #logo{
+    position: absolute;
+    text-align: center;
+    left: 0%;
+    top: -125%;
+   }
+
+   #descripcion{
+    position: absolute;
+    text-align: center;
+   left: 50%;
+    top: -115%;
+   }
+
+   
+   #comentario{
+
+    position: static;
+   margin-top: 100%;
+      left: -20%;
+     
   }
+#comentario2{
+  position: static;
+  margin-top: 10%;
+  left:0%;
+}
+
+#comentario3{
+position: static;
+margin-top: -30%;
+left: 0%;
+
+}
+
+  #espanol {
+
+left: 20%;
+bottom: 25%;
+
+  }
+
+  #ingles{
+
+    bottom: 25%;
+    left: 50%
+
+  }
+
+
 }
